# freewili-finder

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  EXAMPLES_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  ci.yml  pip.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/src/: pyfwfinder.cpp
bindings/python/test/: test_findall.py
bindings/python/tests/: test_basic.py
bindings/zig/: Readme.md  build.zig  build.zig.zon
bindings/zig/src/: main.zig  root.zig
c_api/: CMakeLists.txt
c_api/include/: cfwfinder.h  cfwfinder_internal.hpp
c_api/src/: cfwfinder.cpp
c_api/test/: test_cfwfinder.cpp  test_fixed_string_copy.cpp
examples/: CMakeLists.txt  README.md  basic_usage.cpp  c_api_basic_usage.c  c_api_basic_usage.cpp  c_api_basic_usage_pure_c.c  test_port_chain.cpp
include/: fwbuilder.hpp  fwfinder.hpp  fwfinder_windows.hpp  usbdef.hpp
src/: .clang-tidy  fwbuilder.cpp  fwfinder.cpp  fwfinder_linux.cpp  fwfinder_mac.cpp  fwfinder_windows.cpp  usbdef.cpp
test/: test_fwfinder.cpp  test_hardware.cpp  test_usbdef.cpp  test_win32.cpp
